--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -125,11 +125,14 @@
   
   .header {   
     & img {
-      width: 85%;   
+      width: 90%;   
       height: 60vh;
       margin-top: 30px; 
-      margin-left :50px;
+      margin-left :30px;
       object-fit: cover;
+      border-top: 4px solid black;
+      border-right: 4px solid black;
+      border-radius: 30px;
     }
 
     & div.head h1 {
@@ -162,6 +165,16 @@
 /* Card de Bootstrap */
 .card-img, .card-img-bottom, .card-img-top {
     width: 10%;
+}
+
+/* Sobre escribo clase card-group*/
+.card-group {
+    display: flex;
+    flex-flow: row wrap;
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
+    border-right: 4px solid black;
+    
 }
 
 .noslogo{
