--- a/css/estilo.css
+++ b/css/estilo.css
@@ -287,19 +287,19 @@ footer ul li a {
   margin-top: -340px;
   letter-spacing: 2px;
   border-right: 2px solid #111;
-  font-size: 20px;
+  font-size: 26px;
   border: none;
-  color: white;
+  color: rgb(206, 233, 53);
   padding-top: 30px;
-  margin-left: 90px;
+  margin-left: 60px;
 }
 .header div.head p {
-  font-size: 18px;
+  font-size: 23px;
   font-weight: bold;
-  margin-top: 100px;
+  margin-top: 150px;
   letter-spacing: 2px;
   padding-left: 60px;
-  color: white;
+  color: rgb(206, 233, 53);
 }
 
 /***********************************************/
