--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -91,14 +91,16 @@
     color:var(--white);
 
     @include desktop {
-      margin-top: 30px;
-      font-size: 25px;
+      margin-top: 10px;
     }
 
   }
 
   .asesoria{
-    margin-top: 60px;
+    margin-top: 30px;
+    @include desktop {
+      margin-top: 10px;
+    }
   }
 
   footer {
@@ -108,7 +110,7 @@
     margin-top: 80px;
     align-items: center;
     text-align: center; 
-    height: 25vh;
+    height: 45vh;
 
     & div p {  
       list-style: none;
@@ -141,20 +143,20 @@
       margin-top: -340px;
       letter-spacing: 2px;
       border-right: 2px solid #111;
-      font-size: 26px;
+      font-size: 27px;
       border: none;
-      color: rgb(206, 233, 53);
+      color: white; //rgb(206, 233, 53);
       padding-top: 30px;
       margin-left: 60px;
     }
 
     & div.head p {
-      font-size: 23px;
+      font-size: 24px;
       font-weight: bold;
       margin-top: 150px;
       letter-spacing: 2px;
       padding-left: 60px;
-      color: rgb(206, 233, 53);
+      color:white //rgb(206, 233, 53);
     }
   }
 
@@ -174,6 +176,11 @@
     border-bottom: 4px solid black;
     border-right: 4px solid black;
     
+}
+
+.card-group-staff {
+  display: flex;
+  flex-flow: row wrap;  
 }
 
 .noslogo{
@@ -451,12 +458,17 @@
    max-width: 95%; 
    margin-left: 0px;
   }
-
-   @include desktop {
-     // max-width: 50%; 
-    //  margin-left: 20px;
+   
+   .h3footer{
+    color:#ffffff;
+    font-weight: bold; 
+    } 
+    .itemgallery  {     
+        & img {
+        width: 100%;   
+      }
    }
- 
+    
 
 /************************************************/
 /************** MEDIA QUERY  Abajo es DESKTOP   */
@@ -469,7 +481,7 @@
 /*****************************************/
 /*****************INICIO (Inidex.html) 
 /****************************************/
-
+  
 div.planes {
     display: grid;
     height: auto;
@@ -515,15 +527,12 @@ div.planes {
 /*****************************************/
 /*************  NOSOTROS           */
 /***************************************/
-
 /************************************************/
 /************** SERVICIOS*/
 /************************************************/
-
 /************************************************/
 /************** NOSOTROS*/
 /************************************************/
-
 /************************************************/
 /************** CLIENTES*/
 /************************************************/
@@ -539,21 +548,48 @@ div.planes {
     grid-row-gap:10px;
     row-gap: 10p;
   }
+  
+  @include desktop {
+    .itemgallery  {     
+      & img {
+      width: 92%;   
+      height: 40vh;
+      margin-top: 0px; 
+      margin-left :20px;
+      max-width: 31rem;
+    }
+  
+    & img:hover {
+      transform: scale(1.1);
+    }
+  }
+ } // desktop
 
-  .itemgallery  {     
-    & img {
-    width: 92%;   
-    height: 40vh;
-    margin-top: 0px; 
-    margin-left :20px;
-    max-width: 31rem;
+ footer {
+  background: rgb(0, 99, 248);
+  color: #fff;
+  padding: 10px;
+  margin-top: 80px;
+  align-items: center;
+  text-align: center; 
+  height: 30vh;
+
+  & div p {  
+    list-style: none;
+    padding: 0;
+    font-size: 12px;
+    margin-bottom: 10px;
+    justify-items: center;
+  }
+  
+  & ul li a {
+    color: #eee;
   }
 
-  & img:hover {
-    transform: scale(1.1);
+  @include mobile {
+    height: 65vh;
   }
- }
-
+}
 /***********************************************/
 /*************** CONTACTO
 /***********************************************/
