--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -249,11 +249,12 @@
     grid-template-columns: repeat(1,1fr);
     padding: 20px;
     border-radius: 10px;
+    padding-top: 10px;
 
     @include desktop {
         grid-template-columns: repeat(2,1fr);
-        margin-top: -20px;
-        padding: 110px;
+        margin-top: 10px;
+        padding-top: 10px;
       }
   }
   
